--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
             </div>
           </div>
         </header>
-        <section id="inicio" class="w-screen py-8 bg-white relative">
-          <div class="w-full block max-w-[64rem] my-8 mx-auto">
+        <section id="inicio" class="bg-white relative">
+          <div>
             <div class="flex flex-row justify-between items-center gap-x-4">
               <div class="max-w-1/2">
                 <h2 class="font-semibold font-[montserrat-semibold] text-[2rem] text-slate-700 mb-6">
@@ -156,8 +156,8 @@
           </div>
         </section>
         <!--Nosotros-->
-        <section id="nosotros" class="w-screen py-8">
-          <div class="w-full block max-w-[64rem] my-8 mx-auto">
+        <section id="nosotros">
+          <div>
             <div class="flex flex-row-reverse justify-between items-center gap-x-4">
               <div class="max-w-1/2">
                 <h2 class="font-semibold font-[montserrat-semibold] text-[2rem] text-slate-700 mb-6">
@@ -169,9 +169,7 @@
                   experiencia ágil, clara y sin complicaciones. Te acompañamos desde la asesoría inicial hasta
                   que recibes tu crédito, colaborando con instituciones financieras líderes para brindarte
                   soluciones accesibles y seguras.
-                </p>
-              </div>
-              <img
+                </p> </div> <img
                 class="block w-[480px]"
                 style="mix-blend-mode: multiply; aspect-ratio: 1"
                 src="https://img.freepik.com/free-psd/portrait-middle-aged-woman_23-2151825917.jpg"
@@ -182,8 +180,8 @@
         </section>
 
         <!--cotizacion-->
-        <section id="simulador" class="w-screen py-8 bg-white">
-          <div class="w-full max-w-[64rem] my-8 mx-auto block">
+        <section id="simulador" class="bg-white">
+          <div>
             <div class="w-full block max-w-[64rem] my-8 mx-auto">
               <h2
                 class="font-semibold font-[montserrat-semibold] text-[2rem] text-slate-700 mb-6 text-center"
