--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>CrediPRO - Tu Crédito Fácil y Rápido</title>
-        <link rel="stylesheet" href="src/styles/global.css" />
-        <link rel="icon" type="image/png" href="src/assets/images/CREDIPROLOGO.png" />
-        <link rel="icon" type="image/x-icon" href="src/assets/images/CREDIPROLOGO.png" />
+        <link rel="stylesheet" href="./src/styles/global.css" />
+        <link rel="icon" type="image/png" href="./src/assets/images/CREDIPROLOGO.png" />
+        <link rel="icon" type="image/x-icon" href="./src/assets/images/CREDIPROLOGO.png" />
         <!-- AOS CSS -->
         <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
         <!-- CDN -->
@@ -379,7 +379,7 @@
                         <p class="text-xl md:text-2xl text-blue-100 mb-8">Solicita tu crédito hoy mismo y da el primer paso con respaldo profesional.</p>
 
                         <a
-                            href="/contacto"
+                            href="./contacto"
                             class="inline-block bg-primary-light text-white px-8 py-4 rounded-xl font-bold text-lg shadow-lg hover:bg-alerts hover:scale-105 transition-transform duration-300"
                         >
                             Habla con un asesor
@@ -639,7 +639,7 @@
                                         proyecto o tener mayor control de tus finanzas, con el acompañamiento correcto puedes transformar tu realidad. Te invitamos a descubrir cómo
                                         una buena estrategia financiera puede darte tranquilidad, abrirte nuevas oportunidades y acercarte a tus metas.
                                     </p>
-                                    <a href="/blog/index.html" class="text-primary-light hover:text-orange-500 font-semibold hover:underline">Leer más →</a>
+                                    <a href="./blog" class="text-primary-light hover:text-orange-500 font-semibold hover:underline">Leer más →</a>
                                 </div>
                             </article>
 
@@ -674,7 +674,7 @@
 
                         <!-- CTA final -->
                         <div class="text-center mt-16">
-                            <a href="/blog" class="inline-block bg-primary-light hover:bg-alerts text-white px-8 py-4 rounded-lg font-semibold text-lg shadow-md transition">
+                            <a href="./blog" class="inline-block bg-primary-light hover:bg-alerts text-white px-8 py-4 rounded-lg font-semibold text-lg shadow-md transition">
                                 Ir al Blog
                             </a>
                         </div>
