Hot fixes in urls

--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
     </body>
 
     <!--Scripts-->
-    <script src="/src/javascript/dom.js"></script>
+    <script src="./src/javascript/dom.js"></script>
     <script>
         const carrousel = document.querySelector("#carrousel");
         const slides = document.querySelectorAll(".slide");
