--- a/contacto/index.html
+++ b/contacto/index.html
@@ -137,7 +137,7 @@
                     <div class="flex justify-between items-center h-16">
                         <!-- Logo -->
                         <a href="#" class="flex-shrink-0">
-                            <img class="h-10" src="/src/assets/images/logo_paleta.png" alt="Logo" />
+                            <img class="h-10" src="../src/assets/images/logo_paleta.png" alt="Logo" />
                         </a>
 
                         <!-- Botón hamburguesa -->
