--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -139,7 +139,7 @@
                     <div class="flex justify-between items-center h-16">
                         <!-- Logo -->
                         <a href="#" class="flex-shrink-0">
-                            <img class="h-10" src="/src/assets/images/logo_paleta.png" alt="Logo" />
+                            <img class="h-10" src="../src/assets/images/logo_paleta.png" alt="Logo" />
                         </a>
 
                         <!-- Botón hamburguesa -->
@@ -324,7 +324,7 @@
                         <div class="lg:w-1/2 relative" data-aos="zoom-in">
                             <div class="relative rounded-xl overflow-hidden shadow-xl">
                                 <img
-                                    src="/src/assets/images/ejecutiva2.png"
+                                    src="../src/assets/images/ejecutiva2.png"
                                     alt="who-we-are"
                                     class="w-full max-w-md mx-auto lg:mx-0 rounded-2xl shadow-lg object-cover aspect-square ring-4 ring-white"
                                     style="mix-blend-mode: multiply"
