update links and remove unnecessary elements

--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -166,7 +166,7 @@
                                 Inicio
                                 <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-alerts transition-all duration-300 group-hover:w-full"></span>
                             </a>
-                            <a href="../nosotros" class="relative group text-sm font-[montserrat-medium] text-slate-800 hover:text-primary-light transition">
+                            <a href="#" onclick="return false;" class="relative group text-sm font-[montserrat-medium] text-slate-800 hover:text-primary-light transition">
                                 ¿Quiénes Somos?
                                 <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-alerts transition-all duration-300 group-hover:w-full"></span>
                             </a>
@@ -198,11 +198,11 @@
                     class="md:hidden bg-white/95 backdrop-blur-md shadow-md px-4 pt-4 pb-6 space-y-3"
                 >
                     <!-- Mismo estilo de efecto en móvil -->
-                    <a href="#" onclick="return false;" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
+                    <a href="../" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
                         Inicio
                         <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-blue-600 transition-all duration-300 group-hover:w-full"></span>
                     </a>
-                    <a href="../nosotros" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
+                    <a href="#" onclick="return false;" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
                         ¿Quiénes Somos?
                         <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-blue-600 transition-all duration-300 group-hover:w-full"></span>
                     </a>
@@ -229,17 +229,17 @@
                       interval: null,
                       slides: [
                       {
-                        image: '/src/assets/images/credi2.jpg',
+                        image: '../src/assets/images/credi2.jpg',
                         title: 'Nosotros',
                         text: 'Simula, solicita y recibe sin complicaciones. Con Credipro, tú das el paso, nosotros te acompañamos.'
                       },
                       {
-                        image: '/src/assets/images/credi.jpg',
+                        image: '../src/assets/images/credi.jpg',
                         title: '¿Quiénes Somos?',
                         text: 'Te asesoramos desde el inicio hasta la entrega del crédito. Seguro, ágil y personalizado.'
                       },
                       {
-                        image: '/src/assets/images/credi2.jpg',
+                        image: '../src/assets/images/credi2.jpg',
                         title: 'Nosotros',
                         text: 'Tu tranquilidad financiera está más cerca de lo que imaginas. Credipro está contigo.'
                       }
@@ -611,8 +611,8 @@
                         <div>
                             <h3 class="text-lg font-semibold text-primary-light dark:text-primary-light">Nosotros</h3>
                             <ul class="mt-4 space-y-2 text-sm">
-                                <li><a href="../nosotros" class="hover:text-blue-600">¿Quiénes somos?</a></li>
-                                <li><a href="../nosotros" class="hover:text-blue-600">¿Qué ofrecemos?</a></li>
+                                <li><a href="#" onclick="return false;" class="hover:text-blue-600">¿Quiénes somos?</a></li>
+                                <li><a href="#" onclick="return false;" class="hover:text-blue-600">¿Qué ofrecemos?</a></li>
                                 <li><a href="../blog" class="hover:text-blue-600">Blog</a></li>
                             </ul>
                         </div>
