--- a/contacto/index.html
+++ b/contacto/index.html
@@ -176,7 +176,7 @@
                                 Blog
                                 <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-alerts transition-all duration-300 group-hover:w-full"></span>
                             </a>
-                            <a href="../contacto" class="relative group text-sm font-[montserrat-medium] text-slate-800 hover:text-primary-light transition">
+                            <a href="#" onclick="return false;" class="relative group text-sm font-[montserrat-medium] text-slate-800 hover:text-primary-light transition">
                                 Contacto
                                 <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-alerts transition-all duration-300 group-hover:w-full"></span>
                             </a>
@@ -196,7 +196,7 @@
                     class="md:hidden bg-white/95 backdrop-blur-md shadow-md px-4 pt-4 pb-6 space-y-3"
                 >
                     <!-- Mismo estilo de efecto en móvil -->
-                    <a href="#" onclick="return false;" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
+                    <a href="../" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
                         Inicio
                         <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-blue-600 transition-all duration-300 group-hover:w-full"></span>
                     </a>
@@ -212,7 +212,7 @@
                         Blog
                         <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-blue-600 transition-all duration-300 group-hover:w-full"></span>
                     </a>
-                    <a href="../contacto" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
+                    <a href="#" onclick="return false;" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
                         Contacto
                         <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-blue-600 transition-all duration-300 group-hover:w-full"></span>
                     </a>
@@ -427,7 +427,7 @@
                                 <li>
                                     <a href="#" onclick="return false;" class="hover:text-blue-600">Créditos Financieros</a>
                                 </li>
-                                <li><a href="../contacto" class="hover:text-blue-600">Asesoría</a></li>
+                                <li><a href="#" onclick="return false;" class="hover:text-blue-600">Asesoría</a></li>
                                 <li><a href="../simulador" class="hover:text-blue-600">Solicita tu Crédito</a></li>
                             </ul>
                         </div>
@@ -445,7 +445,7 @@
                     <div>
                         <h3 class="text-lg font-semibold text-primary-light dark:text-primary-light">Contáctanos</h3>
                         <ul class="mt-4 space-y-2 text-sm">
-                            <li><a href="../contacto" class="hover:text-blue-600">Ayuda</a></li>
+                            <li><a href="#" onclick="return false;" class="hover:text-blue-600">Ayuda</a></li>
                             <li>
                                 <a href="#" onclick="return false;" class="hover:text-blue-600">Política de privacidad</a>
                             </li>
