--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
                         <!-- Imagen -->
                         <div class="lg:w-1/2" data-aos="fade-left">
                             <img
-                                src="/src/assets/images/ejecutivo3.png"
-                                alt="Mujer sonriendo"
+                                src="./src/assets/images/ejecutivo3.png"
+                                alt="ejecutivo"
                                 class="w-full max-w-md mx-auto lg:mx-0 rounded-2xl shadow-lg object-cover aspect-square ring-4 ring-white"
                             />
                         </div>
@@ -353,7 +353,7 @@
                         <div class="lg:w-1/2 relative" data-aos="zoom-in">
                             <div class="relative rounded-xl overflow-hidden shadow-xl">
                                 <img
-                                    src="/src/assets/images/ejecutiva2.png"
+                                    src="./src/assets/images/ejecutiva2.png"
                                     alt="who-we-are"
                                     class="w-full max-w-md mx-auto lg:mx-0 rounded-2xl shadow-lg object-cover aspect-square ring-4 ring-white"
                                     style="mix-blend-mode: multiply"
