--- a/simulador/index.html
+++ b/simulador/index.html
@@ -168,7 +168,7 @@
                                 ¿Quiénes Somos?
                                 <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-alerts transition-all duration-300 group-hover:w-full"></span>
                             </a>
-                            <a href="../simulador" class="relative group text-sm font-[montserrat-medium] text-slate-800 hover:text-primary-light transition">
+                            <a href="#" onclick="return false;" class="relative group text-sm font-[montserrat-medium] text-slate-800 hover:text-primary-light transition">
                                 Solicita tu Crédito
                                 <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-alerts transition-all duration-300 group-hover:w-full"></span>
                             </a>
@@ -196,7 +196,7 @@
                     class="md:hidden bg-white/95 backdrop-blur-md shadow-md px-4 pt-4 pb-6 space-y-3"
                 >
                     <!-- Mismo estilo de efecto en móvil -->
-                    <a href="#" onclick="return false;" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
+                    <a href="../" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
                         Inicio
                         <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-blue-600 transition-all duration-300 group-hover:w-full"></span>
                     </a>
@@ -204,7 +204,7 @@
                         ¿Quiénes Somos?
                         <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-blue-600 transition-all duration-300 group-hover:w-full"></span>
                     </a>
-                    <a href="../simulador" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
+                    <a href="#" onclick="return false;" class="relative group block text-sm font-medium text-slate-800 hover:text-blue-700 transition">
                         Solicita tu Crédito
                         <span class="absolute left-0 bottom-0 w-0 h-[2px] bg-blue-600 transition-all duration-300 group-hover:w-full"></span>
                     </a>
@@ -227,17 +227,17 @@
                       interval: null,
                       slides: [
                       {
-                        image: '/src/assets/images/credi.jpg',
+                        image: '../src/assets/images/credi.jpg',
                         title: 'Simula tu credito',
                         text: 'Simula, solicita y recibe sin complicaciones. Con Credipro, tú das el paso, nosotros te acompañamos.'
                       },
                       {
-                        image: '/src/assets/images/credi3.jpg',
+                        image: '../src/assets/images/credi3.jpg',
                         title: 'Simulador',
                         text: 'Te asesoramos desde el inicio hasta la entrega del crédito. Seguro, ágil y personalizado.'
                       },
                       {
-                        image: '/src/assets/images/credi2.jpg',
+                        image: '../src/assets/images/credi2.jpg',
                         title: 'Simula tu credito',
                         text: 'Tu tranquilidad financiera está más cerca de lo que imaginas. Credipro está contigo.'
                       }
@@ -647,10 +647,10 @@
                             <h3 class="text-lg font-semibold text-primary-light dark:text-primary-light">Créditos</h3>
                             <ul class="mt-4 space-y-2 text-sm">
                                 <li>
-                                    <a href="#" onclick="return false;" class="hover:text-blue-600">Créditos Financieros</a>
+                                    <a href="../" class="hover:text-blue-600">Créditos Financieros</a>
                                 </li>
                                 <li><a href="../contacto" class="hover:text-blue-600">Asesoría</a></li>
-                                <li><a href="../simulador" class="hover:text-blue-600">Solicita tu Crédito</a></li>
+                                <li><a href="#" onclick="return false;" class="hover:text-blue-600">Solicita tu Crédito</a></li>
                             </ul>
                         </div>
                         <div>
