--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -374,7 +374,7 @@
             <!--Misison-->
             <section class="bg-white py-14">
                 <div class="container-full lg:max-w-[1024px] mx-auto max-w-[calc(100vw_-_2rem)]">
-                    <div class="flex flex-row flex-no-wrap justify-between gap-y-8 items-center">
+                    <div class="flex flex-col sm:flex-row flex-no-wrap justify-between gap-y-8 items-center">
                         <div class="md:max-w-[50%]" data-aos="fade-left">
                             <h2 class="text-4xl md:text-5xl font-bold text-[#003B73] mb-6 leading-tight">Nuestra Misión
                             </h2>
@@ -402,7 +402,7 @@
             <!--Que hacemos-->
             <section class="bg-slate-100 py-14">
                 <div class="container-full max-w-[1024px] mx-auto">
-                    <div class="flex flex-row-reverse flex-no-wrap justify-between gap-y-8 items-center">
+                    <div class="flex flex-col sm:flex-row-reverse  flex-no-wrap justify-between gap-y-8 items-center">
                         <div class="md:max-w-[50%]" data-aos="fade-left">
                             <h2 class="text-4xl md:text-5xl font-bold text-[#003B73] mb-6 leading-tight">¿Qué hacemos?
                             </h2>
@@ -424,7 +424,7 @@
             <!--Valores-->
             <section class="bg-white py-14">
                 <div class="container-full max-w-[1024px] mx-auto">
-                    <div class="flex flex-row flex-no-wrap justify-between gap-y-8 items-center">
+                    <div class="flex flex-col sm:flex-row flex-no-wrap justify-between gap-y-8 items-center">
                         <div class="md:max-w-[50%]" data-aos="fade-left">
                             <h2 class="text-4xl md:text-5xl font-bold text-[#003B73] mb-6 leading-tight">Nuestros
                                 Valores</h2>
@@ -487,7 +487,7 @@
             <!--Por que elegir-->
             <section class="bg-white py-14">
                 <div class="container-full max-w-[1024px] mx-auto">
-                    <div class="flex flex-row flex-no-wrap justify-between items-center">
+                    <div class="flex flex-col md:flex-row flex-no-wrap justify-between items-center">
                         <div class="md:max-w-[50%]" data-aos="fade-left">
                             <h2 class="text-4xl md:text-5xl font-bold text-[#003B73] mb-6 leading-tight">¿Por qué elegir
                                 Credipro?</h2>
@@ -627,7 +627,7 @@
             <section class="relative w-full border-t border-gray-200 overflow-hidden group" id="google-maps">
                 <!-- Título flotante -->
                 <div
-                    class="absolute top-6 left-1/2 transform -translate-x-1/2 bg-white/90 backdrop-blur-sm px-6 py-2 rounded-full shadow-md text-primary-light font-semibold text-lg z-10 animate-fade-in-down">
+                    class="absolute top-6 left-1/2 transform -translate-x-1/2 bg-white/90 backdrop-blur-sm px-6 py-2 rounded-full shadow-md text-primary-light font-semibold md:text-lg z-10 animate-fade-in-down">
                     📍 Estamos aquí
                 </div>
 
