--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
         <!-- Logo y redes -->
         <div>
           <div class="flex items-center space-x-2">
-            <span class="text-3xl font-extrabold text-primary-light dark:text-primary-light">CrédiPRO</span>
+            <span class="text-3xl font-extrabold text-primary-light dark:text-primary-light">Credipro</span>
           </div>
           <p class="mt-4 text-sm leading-relaxed">
             Tu tranquilidad financiera está más cerca de lo que imaginas. Te acompañamos desde la asesoría inicial hasta
