--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -287,7 +287,7 @@
                             <div class="text-white max-w-2xl mx-auto">
                                 <h1 class="text-4xl md:text-5xl font-extrabold mb-4" x-text="slide.title"></h1>
                                 <p class="text-lg md:text-xl mb-6" x-text="slide.text"></p>
-                                <a href="./simulador"
+                                <a href="https://wa.me/525568701352" target="_blank"
                                     class="relative inline-block text-white font-medium bg-primary-light hover:bg-alerts px-6 py-3 rounded-lg transition duration-300 overflow-hidden">
                                     <span class="relative z-10">Solicita tu crédito</span>
                                     <span
