--- a/simulador/index.html
+++ b/simulador/index.html
@@ -281,10 +281,12 @@
 
                         <!-- Botón -->
                         <div class="text-center">
-                            <button type="submit"
-                                class="bg-black hover:bg-primary text-white px-6 py-2 rounded-lg font-semibold text-lg shadow-md transition">
-                                Solicitar crédito
-                            </button>
+                            <a href="https://wa.me/525568701352" target="_blank"
+                                    class="relative inline-block text-white font-medium bg-primary-light hover:bg-alerts px-6 py-3 rounded-lg transition duration-300 overflow-hidden">
+                                    <span class="relative z-10">Solicita tu crédito</span>
+                                    <span
+                                        class="absolute bottom-0 left-0 w-0 h-[2px] bg-white transition-all duration-300 ease-in-out group-hover:w-full"></span>
+                                </a>
                         </div>
                     </form>
                 </div>
@@ -409,7 +411,6 @@
                 </div>
             </section>
 
-           
 
             <!-- Section media -->
             <section class="relative bg-[#F2F4F8] py-24 px-6">
